<resources>
    <string name="app_name">Hw8</string>
    <string name="editTextFullname">Full Name</string>
    <string name="editTextUsername">Username</string>
    <string name="editTextEmail">Email</string>
    <string name="editTextPassword">Password</string>
    <string name="editTextRetypePassword">Re-type Password</string>
    <string name="genderTextview">Gender</string>
    <string name="radioBtnMale">Male</string>
    <string name="radioBtnFemale">Female</string>
    <string name="btnRegister">Register</string>
    <string name="btnShowInfo">Show Info</string>
    <string name="tvGender">Gender</string>
    <string name="btnHideInfo">Hide Info</string>
    <string name="reset">reset</string>
    <string name="tv_result">Draw</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="draw">Draw</string>
</resources>